# fused-effects-linear

./: CHANGELOG.md  LICENSE  README.md  fused-effects-linear.cabal
app/: Main.hs
src/: FusedEffectsLinear.hs
src/Control/Algebra/: Linear.hs
src/Control/Algebra/Linear/: Handler.hs
