cabal-version:       2.4
name:                fused-effects-linear
version:             0.0.0.0
synopsis:            Fused effects with linearity.
description:         Fused effects with linearity.
homepage:            https://github.com/patrickt/fused-effects-linear
bug-reports:         https://github.com/patrickt/fused-effects-linear/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Patrick Thomson
maintainer:          Patrick Thomson <patrickt@github.com>
copyright:           2021 Patrick Thomson
category:            Control
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/patrickt/fused-effects-linear.git

common common-options
  build-depends:       base ^>= 4.15.0.0
                     , linear-base

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Control.Algebra.Linear
                       Control.Algebra.Linear.Handler

test-suite fused-effects-linear-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       fused-effects-linear
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
